--- a/templates/zinnia/skeleton.html
+++ b/templates/zinnia/skeleton.html
@@ -4,6 +4,14 @@
 <html>
     <head>
         <title>{% block title %}{% endblock title %}{% block title-page %}{% endblock title-page %}</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="cache-control" content="public" />
+        <meta name="robots" content="follow, all" />
+        <meta name="language" content="{{ LANGUAGE_CODE }}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="home" href="{{ index }}" />
+        {% include 'zinnia/include/favicon.html' %}
+        {% include 'zinnia/include/css.html' %}
         {% block link %}{% endblock link %}
         {% block script %}{% endblock script %}
     </head>
