--- a/templates/comments/zinnia/entry/form.html
+++ b/templates/comments/zinnia/entry/form.html
@@ -1,4 +1,4 @@
-{% load comments i18n %}
+{% load comments bootstrap3 i18n %}
 <form action="{% comment_form_target %}" method="post" id="comment-form" class="contact-form" name="contact-form">
     {% csrf_token %}
     <input type="hidden" name="next" value="{% url 'zinnia:comment_success' %}"/>
@@ -10,25 +10,27 @@
     <div class="row">
         <div class="col-sm-5">
             <div class="form-group">
-                <label for="id_name">Name *</label>
+                <label for="id_name">{% trans 'Name' %} * </label>
                 <input type="text" id="id_name" name="name" class="form-control" required="required">
             </div>
             <div class="form-group">
-                <label for="id_email">Email *</label>
+                <label for="id_email">{% trans 'Email' %} *</label>
                 <input type="email" id="id_email" name="email" class="form-control" required="required">
             </div>
             <div class="form-group">
-                <label for="id_url">URL</label>
+                <label for="id_url">{% trans 'URL' %}</label>
                 <input type="url" id="id_url" name="url" class="form-control">
             </div>
         </div>
         <div class="col-sm-7">
             <div class="form-group">
-                <label for="id_comment">Message *</label>
+                <label for="id_comment">{% trans 'Message' %} *</label>
                 <textarea name="comment" id="id_comment"  required="required" class="form-control" rows="8"></textarea>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-lg">Опубликовать</button>
+                <button type="submit" class="btn btn-primary">
+                    {% bootstrap_icon "star" %} {% trans 'Submit' %}
+                </button>
             </div>
         </div>
     </div>
