--- a/templates/comments/zinnia/entry/form.html
+++ b/templates/comments/zinnia/entry/form.html
@@ -10,22 +10,18 @@
     <div class="row">
         <div class="col-sm-5">
             <div class="form-group">
-                <label for="id_name">{% trans 'Name' %} * </label>
-                <input type="text" id="id_name" name="name" class="form-control" required="required">
+                {% bootstrap_field form.name %}
             </div>
             <div class="form-group">
-                <label for="id_email">{% trans 'Email' %} *</label>
-                <input type="email" id="id_email" name="email" class="form-control" required="required">
+                {% bootstrap_field form.email %}
             </div>
             <div class="form-group">
-                <label for="id_url">{% trans 'URL' %}</label>
-                <input type="url" id="id_url" name="url" class="form-control">
+                {% bootstrap_field form.url %}
             </div>
         </div>
         <div class="col-sm-7">
             <div class="form-group">
-                <label for="id_comment">{% trans 'Message' %} *</label>
-                <textarea name="comment" id="id_comment"  required="required" class="form-control" rows="8"></textarea>
+                {% bootstrap_field form.comment %}
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">
